# InventorySystem

./: .gitignore
backend/: app.py  pyproject.toml
backend/models/: models.py
backend/utils/: utils.py
backend/views/: routes.py
